# ROS-chat

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  next_development_plan.md  package-lock.json  project_analysis_and_frontend_design.md  project_improvement_suggestions.md  pyproject.toml  setup.cfg  vision_integration_design.md
docs/: INSTALL.md  topics.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CameraPanel.test.tsx  CameraPanel.tsx  ChatPanel.tsx  SettingsDialog.tsx  StatsPanel.tsx  StatusBar.tsx
frontend/src/hooks/: useCamera.ts  useChat.ts  useDetections.ts  useRosbridge.test.ts  useRosbridge.ts
frontend/src/store/: index.ts
frontend/src/styles/: global.css
frontend/src/types/: index.ts
scripts/: check_ros_install.sh  generate_requirements.sh
src/llm_chat_node/: package.html  package.xml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
src/llm_chat_node/launch/: llm_chat_launch.py  vision_chat_launch.py
src/llm_chat_node/llm_chat_node/: __init__.py  camera_node  camera_node.py  detectors.py  llm_chat_node  utils.py  vision_node  vision_node.py
src/llm_chat_node/llm_chat_node.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/llm_chat_node/scripts/: download_yolo_model.py
src/llm_chat_node/tests/: test_detectors.py  test_detectors_ort.py  test_llm_node.py  test_utils.py
