<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypespec="http://www.w3.org/2001/XMLSchema-instance"?>
<package format="3">
  <name>llm_chat_node</name>
  <version>0.1.0</version>
  <description>LLM chat node for ROS2 with vision integration</description>
  <maintainer email="huiya@example.com">huiya</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
